kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodecraft
  namespace: production
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: nodecraft
    spec:
      containers:
      - name: nodecraft
        image: zihao/nodecraft:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
