kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodecraft
  namespace: production
  labels:
    app: nodecraft
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: nodecraft
